# X265EncoderFilter

./: CMakeLists.txt  DLLSetup.cpp  ReadMe.txt  X265EncoderFilter.cpp  X265EncoderFilter.def  X265EncoderFilter.h  X265EncoderFilter.rc  X265EncoderProperties.h  resource.h  stdafx.cpp  stdafx.h
